Added APIS for Login, Post, Subreddits, Comments, Vote, Logout, Refresh token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.mail.username=3ccd486ac5da81
 spring.mail.password=d77044d4ee0b53
 spring.mail.protocol=smtp
 
+############## JWT Properties ################################################
+jwt.expiration.time=900000
+
