Updated mailserver details

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,9 +10,9 @@ spring.jpa.show-sql=true
 
 ############## Mail Properties ###############################################
 spring.mail.host=smtp.mailtrap.io
-spring.mail.port=2525
-spring.mail.username=3ccd486ac5da81
-spring.mail.password=d77044d4ee0b53
+spring.mail.port=0000
+spring.mail.username=**************
+spring.mail.password=**************
 spring.mail.protocol=smtp
 
 ############## JWT Properties ################################################
