Updated UI components

--- a/src/main/resources/frontend/redditclone-angular-app/package.json
+++ b/src/main/resources/frontend/redditclone-angular-app/package.json
@@ -20,12 +20,14 @@
     "@angular/platform-browser": "~11.0.9",
     "@angular/platform-browser-dynamic": "~11.0.9",
     "@angular/router": "~11.0.9",
+    "@forevolve/bootstrap-dark": "^1.0.0",
     "@fortawesome/angular-fontawesome": "^0.8.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "@tinymce/tinymce-angular": "^4.2.1",
     "bootstrap": "^4.6.0",
+    "dark-mode-switch": "^1.0.0",
     "ngx-toastr": "^13.2.0",
     "ngx-webstorage": "^7.0.1",
     "rxjs": "~6.6.0",
